--- a/src/components/parallax/parallax.scss
+++ b/src/components/parallax/parallax.scss
@@ -9,9 +9,11 @@
   overflow: hidden;
 
   h1 {
+    font-weight: 400;
     font-size: 100px;
     @include mobile {
       font-size: 72px;
+
       text-align: center;
     }
   }
